list method cleanup