@@ -124,13 +124,13 @@ public class ImportChartController implements LanguageChangeListener {
 
         chart.getData().add(new XYChart.Series(data));
         if(colorMean)
-            chart.getData().get(0).getData().forEach(d -> d.getNode().setStyle(
+            chart.getData().getFirst().getData().forEach(d -> d.getNode().setStyle(
                     d.getYValue().doubleValue()>=mean?
                             "-fx-bar-fill: GREEN":
                             "-fx-bar-fill: RED"
             ));
         else
-            chart.getData().get(0).getData().forEach(d -> d.getNode().setStyle("-fx-bar-fill: BLUE"));
+            chart.getData().getFirst().getData().forEach(d -> d.getNode().setStyle("-fx-bar-fill: BLUE"));
 
         return chart;
     }
